--- a/React with CDN/example7.html
+++ b/React with CDN/example7.html
@@ -36,7 +36,7 @@
           React.createElement(
             "p",
             null,
-            "React is a component based JS Library used by"
+            "React is a component based JS Library used by :"
           ),
           React.createElement("ul", null, [
             React.createElement("li", null, "Facebook"),
