conditional rendering with ternary operator

--- a/03. Conditional Rendering/example2.html
+++ b/03. Conditional Rendering/example2.html
@@ -33,7 +33,9 @@
         return (
           <div>
             <p>Number is {num}</p>
-            <small>It is an {num % 2 == 0 ? "Even" : "Odd"} Number</small>
+            <small>
+              It is an {num % 2 == 0 ? <b>Even</b> : <b>Odd</b>} Number
+            </small>
           </div>
         );
       }
