--- a/03. Conditional Rendering/example3.html
+++ b/03. Conditional Rendering/example3.html
@@ -33,7 +33,7 @@
         return (
           <div>
             <p>Number is {num}</p>
-            <small>It is an {num % 2 == 0 ? "Even" : "Odd"} Number</small>
+            <small>{num % 2 == 0 ? "It is an Even Number" : ""} </small>
           </div>
         );
       }
