--- a/01. React With CDN/example1.html
+++ b/01. React With CDN/example1.html
@@ -18,7 +18,7 @@
     ></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="code"></div>
     <script>
       //   let myElement = React.createElement("h1", null, "React Rocks !!!"); => No property
       /*   let myElement = React.createElement("h1", {align:'center'}, "React Rocks !!!");
@@ -37,7 +37,7 @@
         },
         "React Rocks !!!"
       );
-      let myDiv = document.querySelector("#root");
+      let myDiv = document.querySelector("#code");
       ReactDOM.render(myElement, myDiv);
     </script>
   </body>
