--- a/01. React With CDN/example3.html
+++ b/01. React With CDN/example3.html
@@ -18,7 +18,7 @@
     ></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="code"></div>
     <script>
       function MyApp() {
         let myHeading = React.createElement("h1", null, "What is React ?");
@@ -40,7 +40,7 @@
 
       ReactDOM.render(
         React.createElement(MyApp),
-        document.querySelector("#root")
+        document.querySelector("#code")
       );
     </script>
   </body>
