Displaying message using if...else conditional rendering

--- a/03. Conditional Rendering/example8.html
+++ b/03. Conditional Rendering/example8.html
@@ -38,8 +38,7 @@
             </p>
           );
         } else {
-          msg = <small>Sorry ! 
-            Better Luck Next Time </small>;
+          msg = <small>Sorry ! Better Luck Next Time </small>;
         }
         return (
           <div>
